src/objects/Remedial_Action__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date_Time__c</fullName>
        <label>Approval/Denial Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <picklist>
            <picklistValues>
                <fullName>Julia Rontree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gavin Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gareth Thyer-Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michelle Reid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Becky Simpson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Remedial Actions</relationshipLabel>
        <relationshipName>Remedial_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>% Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offer_Claim_Date__c</fullName>
        <label>Offer Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Expiry_Date__c</fullName>
        <label>Offer Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Resolution_Description__c</fullName>
        <label>Offer/Resolution Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Resolution__c</fullName>
        <label>Offer/Resolution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Extend Closure Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC Additional Classification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC Daily or Weekly Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC Rerun Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC Rerun Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Pre-Approval Required)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Possible_Roles_to_Apply_Offer__c</fullName>
        <label>Possible Roles to Apply Offer</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QMS_Id__c</fullName>
        <label>QMS Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Credit__c</fullName>
        <label>Reason for Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Denial__c</fullName>
        <label>Reason for Denial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recharge_Value__c</fullName>
        <label>Recharge Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Given</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_of_Credit__c</fullName>
        <label>Value of Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Remedial Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Approver_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Reason_for_Credit__c</columns>
        <columns>Reason_for_Denial__c</columns>
        <columns>Value_of_Credit__c</columns>
        <columns>Approval_Date_Time__c</columns>
        <columns>Offer_Resolution__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Remedial Actions</label>
        <sharedTo>
            <group>Customer_Success_Team</group>
            <roleAndSubordinates>Customer_Services_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCC</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Reason_for_Credit__c</columns>
        <columns>Reason_for_Denial__c</columns>
        <columns>Value_of_Credit__c</columns>
        <columns>Recharge_Value__c</columns>
        <columns>QMS_Id__c</columns>
        <columns>Approval_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Remedial_Action__c.Classified_Credit</value>
        </filters>
        <label>Classified Credits - All</label>
        <sharedTo>
            <group>Customer_Success_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCCClosed</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Reason_for_Credit__c</columns>
        <columns>Reason_for_Denial__c</columns>
        <columns>Value_of_Credit__c</columns>
        <columns>Recharge_Value__c</columns>
        <columns>QMS_Id__c</columns>
        <columns>Approval_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Remedial_Action__c.Classified_Credit</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Denied,Credit Given</value>
        </filters>
        <label>Classified Credits - Closed</label>
        <sharedTo>
            <group>Customer_Success_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCCOpen</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Reason_for_Credit__c</columns>
        <columns>Reason_for_Denial__c</columns>
        <columns>Value_of_Credit__c</columns>
        <columns>Recharge_Value__c</columns>
        <columns>QMS_Id__c</columns>
        <columns>Approval_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Remedial_Action__c.Classified_Credit</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>TBD,Awaiting Approval</value>
        </filters>
        <label>Classified Credits - Open</label>
        <sharedTo>
            <group>Customer_Success_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GoodwillOffersAll</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Offer_Resolution__c</columns>
        <columns>Offer_Resolution_Description__c</columns>
        <columns>Offer_Claim_Date__c</columns>
        <columns>Offer_Expiry_Date__c</columns>
        <columns>Possible_Roles_to_Apply_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Remedial_Action__c.Goodwill_Offer</value>
        </filters>
        <label>Goodwill Offers - All</label>
        <sharedTo>
            <group>Customer_Success_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GoodwillOffersAllClosed</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Offer_Resolution__c</columns>
        <columns>Offer_Resolution_Description__c</columns>
        <columns>Offer_Claim_Date__c</columns>
        <columns>Offer_Expiry_Date__c</columns>
        <columns>Possible_Roles_to_Apply_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Remedial_Action__c.Goodwill_Offer</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Denied,Offer Given</value>
        </filters>
        <label>Goodwill Offers - Closed</label>
        <sharedTo>
            <group>Customer_Success_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GoodwillOffersAllOpen</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Offer_Resolution__c</columns>
        <columns>Offer_Resolution_Description__c</columns>
        <columns>Offer_Claim_Date__c</columns>
        <columns>Offer_Expiry_Date__c</columns>
        <columns>Possible_Roles_to_Apply_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Remedial_Action__c.Goodwill_Offer</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>TBD,Awaiting Approval</value>
        </filters>
        <label>Goodwill Offers - Open</label>
        <sharedTo>
            <group>Customer_Success_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Remedial Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remedial Actions</pluralLabel>
    <recordTypes>
        <fullName>Classified_Credit</fullName>
        <active>true</active>
        <description>Remedial Action that requires a credit to be given to the customer</description>
        <label>Classified Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goodwill_Offer</fullName>
        <active>true</active>
        <description>Remedial Action given to a customer that is more of a &quot;goodwill&quot; gesture</description>
        <label>Goodwill Offer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Reason_for_Denial_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Reason_for_Denial__c ),
  TEXT(Status__c ) = &quot;Denied&quot;
   )</errorConditionFormula>
        <errorDisplayField>Reason_for_Denial__c</errorDisplayField>
        <errorMessage>Please input the reason why this remedial action has been denied.</errorMessage>
    </validationRules>
</CustomObject>